--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 h1{
   text-align: center;
 }
-/* #color{
-  width: auto;
-} */
+#color{
+  height: 200px;
+  width: 200px;
+  display: circle;
+  border-radius: 100%;
+
+}
