--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,11 @@ h1{
 #color{
   height: 200px;
   width: 200px;
-  display: circle;
-  border-radius: 100%;
 
+}
+#insert{
+  width: 30%;
+}
+#born{
+  width: 30%;
 }
